2016-10-26	"A list is only as strong as its weakest link."

		include/innocent-pear/omg.h :
		- x86-32 and x86-64 hacks:
		  - omg<...>::omg() no longer generates `rdtsc'
		  - omg<...>::omg(.) now only produces `rdtsc' if compiling
		    for i486 or above, or for x86-64
		  - now tries to produce `smsw' instructions

		.travis.yml :
		- now tries to use g++ to dynamically link i686 code _without_
		  `-static-libstdc++'

2016-10-23	Round and round and round and round.

		include/innocent-pear/kthxbai.h :
		- alternatives involving opaque predicates:
		  - kthxbai_impl<...>(x, ) now always assigns to a temporary
		    variable before finally assigning to x
		  - removed one alternative

		include/innocent-pear/omg.h ,
		include/innocent-pear/unpossible.h :
		- removed dummy uses of `this'

2016-10-22	"Unpossible!"

		include/innocent-pear/unpossible.h :
		- split from omg.h and given a new name

		include/innocent-pear/kthxbai.h :
		- moved bit_set(...) out to bbq.h
		- further improved opaque predicates -- among other things,
		  can now do non-trivial things in _both_ branches of an
		  `if ... else ...'
		- simplified one of the spurious `do ... while' loops
		- added braces to properly delineate the scopes of the various
		  kthxbai_impl<...> objects in recursion

		include/innocent-pear/omg.h :
		- split omg_impl_0 into unpossible.h
		- omg<...> constructor can now accept a second boolean
		  argument; `true' means we are free to emit junk
		- now calls rofl<...>::open(...) with proper argument cast

		include/innocent-pear/bbq.h :
		- moved bit_set(...) from kthxbai.h

		include/innocent-pear/rofl.h :
		- rofl_impl_syscall<...>::re_arg(.) now directly casts
		  pointers to uintptr_t without going through a union :-)

		GNUmakefile :
		- added include/innocent-pear/unpossible.h to dependencies
		- now dumps larger portions of compiled test binaries (again)

2016-10-21	Round and round and round.

		include/innocent-pear/kthxbai.h :